# annotation_dataset

./: .gitignore  README.md  pyproject.toml  run_unitrain.sh
cli/: eval.py  train.py
configs/algorithms/: sam2.yaml
configs/runtime/: server.yaml
configs/training/: yolo11n_seg.yaml
datasets/: __init__.py  manifest.py
docs/superpowers/plans/: 2026-07-07-annotation-to-unitrain.md
docs/superpowers/specs/: 2026-07-07-annotation-to-unitrain-design.md
examples/: dataset_only.yaml  end_to_end_rfdetr.yaml  end_to_end_yolo.yaml  mixed_images_and_video.yaml  train_yolo.yaml
pipeline/: cli.py  config.py  input_source.py  manifest.py  pipeline.py  presets.yaml
pipeline/stages/: __init__.py  annotation_dataset.py  masks.py  sam2_video.py  training.py
tasks/example_task/: task.yaml
tests/: test_annotation_to_unitrain_orchestration.py  test_coco_export_and_video_input.py  test_dataset_manifest.py  test_sam2_video_cli.py  test_standalone_layout.py  test_training_stages.py  test_unitrain_migration.py
tools/sam2/: sam2_video_cli.py
unitrain/: config_gen.py  data_converter.py  utils.py
unitrain/runners/_scripts/: rfdetr_train.py
weights/: rf-detr-base.pth
