[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perception-platform"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
perception-platform = "pipeline.cli:main"
annotation-dataset = "pipeline.cli:main"
annotation_dataset = "pipeline.cli:main"
pipeline = "pipeline.cli:main"
unitrain-train = "cli.train:main"
unitrain-predict = "cli.predict:main"
unitrain-export = "cli.export:main"
unitrain-eval = "cli.eval:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "datasets*", "unitrain*", "cli*"]
exclude = ["configs*", "registry*", "tasks*", "tests*", "tools*"]
